fix: animation on small screen

--- a/css/benefits.css
+++ b/css/benefits.css
@@ -98,4 +98,17 @@
     width: 70px;
     height: 70px;
   }
+
+  .item-benefits:nth-of-type(1).show {
+  transition-delay: 0.1s;
+}
+
+.item-benefits:nth-of-type(2).show {
+  transition-delay: 0.2s;
+}
+
+.item-benefits:nth-of-type(3).show {
+  transition-delay: 0.3s;
+}
+
 }
