--- a/css/steps.css
+++ b/css/steps.css
@@ -77,4 +77,27 @@
     text-align: center;
     margin-bottom: 15px;
   }
+
+  .item-steps:nth-of-type(1).show {
+  transition-delay: 0.1s;
+}
+
+.item-steps:nth-of-type(2).show {
+  transition-delay: 0.2s;
+}
+
+.item-steps:nth-of-type(3).show {
+  transition-delay: 0.3s;
+}
+.item-steps:nth-of-type(4).show {
+  transition-delay: 0.4s;
+}
+.item-steps:nth-of-type(5).show {
+  transition-delay: 0.5s;
+}
+
+.item-steps:nth-of-type(6).show {
+  transition-delay: 0.6s;
+}
+
 }
